# gmtoolkit

./: BUILDING.md  CMakeLists.txt  NOTICE  README.md
.github/workflows/: release.yml
docs/: SOURCE.txt.template
include/GMSLib/: GMSChunks.h  GMSData.h  GMSGameContext.h  GMSIO.h  GlobalFunctions.h
include/GMSLib/Compiler/: BuiltinList.h  Builtins.h  BytecodeSerializer.h  CodeBuilder.h  CompileGroup.h  CompileResult.h
include/GMSLib/Models/: GMSCode.h  GMSCodeLocals.h  GMSFunction.h  GMSGeneralInfo.h  GMSGlobalInit.h  GMSInstruction.h  GMSScript.h  GMSString.h  GMSVariable.h
include/GMSLib/SaveBackend/: ChunkShift.h  CodeChunk.h  Pools.h  ScptGrow.h  Stamp.h
include/Toolkit/: Buffer.h  DebugOps.h  ExtractTextures.h  IO.h  Log.h  Options.h  PatchShaders.h  Platform.h  Verify.h  Version.h
include/Toolkit/Codec/: Txtr.h
include/Underanalyzer/: GMEnum.h  GameSpecificRegistry.h  IGameContext.h  IGlobalFunctions.h  VMConstants.h  VMData.h
include/Underanalyzer/Compiler/: CompileContext.h  CompilerException.h  FunctionScope.h  IBuiltins.h  ICodeBuilder.h  ISubCompileContext.h  NodeArena.h
include/Underanalyzer/Compiler/Bytecode/: ArrayOwners.h  BranchPatch.h  BytecodeContext.h  ControlFlowContext.h  FunctionEntry.h  InstructionPatch.h
include/Underanalyzer/Compiler/Errors/: ICompileError.h  LexerError.h  ParserError.h
include/Underanalyzer/Compiler/Lexer/: ContiguousTextReader.h  Identifiers.h  LexContext.h  Macro.h  Numbers.h  Strings.h  Symbols.h  Tags.h  Token.h  Whitespace.h
include/Underanalyzer/Compiler/Nodes/: AccessorNode.h  AssetReferenceNode.h  AssignNode.h  BinaryChainNode.h  BlockNode.h  BooleanNode.h  BreakNode.h  ConditionalNode.h  ContinueNode.h  DoUntilLoopNode.h  DotVariableNode.h  EmptyNode.h  EnumDeclaration.h  ExitNode.h  ForLoopNode.h  FunctionCallNode.h  FunctionDeclNode.h  IASTNode.h  IfNode.h  Int64Node.h  LocalVarDeclNode.h  NewObjectNode.h  NullishCoalesceNode.h  NumberNode.h  PostfixNode.h  PrefixNode.h  RepeatLoopNode.h  ReturnNode.h  SimpleFunctionCallNode.h  SimpleVariableNode.h  StringNode.h  SwitchCaseNode.h  SwitchNode.h  ThrowNode.h  TryCatchNode.h  UnaryNode.h  WhileLoopNode.h  WithLoopNode.h
include/Underanalyzer/Compiler/Parser/: Expressions.h  Functions.h  ParseContext.h  Statements.h  StaticDeclarations.h  TryStatementContext.h
src/GMSLib/: GMSChunks.cpp  GMSData.cpp  GMSGameContext.cpp  GMSIO.cpp  GMSIO_Save.cpp  GlobalFunctions.cpp
src/GMSLib/Compiler/: BuiltinList.cpp  Builtins.cpp  BytecodeSerializer.cpp  CodeBuilder.cpp  CompileGroup.cpp  CompileResult.cpp
src/GMSLib/SaveBackend/: ChunkShift.cpp  CodeChunk.cpp  Pools.cpp  PoolsCommit.cpp  PoolsInternal.h  ScptGrow.cpp  Stamp.cpp  VersionDetect.cpp
src/Toolkit/: CompressAudio.cpp  DebugOps.cpp  DragDropTee.cpp  ExtractTextures.cpp  Main.cpp  Options.cpp  PatchShaders.cpp  RepackTextures.cpp  RetargetBytecode.cpp  ToggleFlags.cpp  Verify.cpp
src/Toolkit/Codec/: Astc.cpp  Png.cpp  Qoif.cpp  TxtrFormat.cpp
src/Underanalyzer/: GMEnum.cpp  VMConstants.cpp  VMData.cpp
src/Underanalyzer/Compiler/: CompileContext.cpp  FunctionScope.cpp  NodeArena.cpp
src/Underanalyzer/Compiler/Bytecode/: ArrayOwners.cpp  BranchPatch.cpp  BytecodeContext.cpp  ControlFlowContext.cpp  FunctionEntry.cpp  InstructionPatch.cpp
src/Underanalyzer/Compiler/Errors/: LexerError.cpp  ParserError.cpp
src/Underanalyzer/Compiler/Lexer/: ContiguousTextReader.cpp  Identifiers.cpp  LexContext.cpp  Macro.cpp  Numbers.cpp  Strings.cpp  Symbols.cpp  Tags.cpp  Token.cpp  Whitespace.cpp
src/Underanalyzer/Compiler/Nodes/: AccessorNode.cpp  AssetReferenceNode.cpp  AssignNode.cpp  BinaryChainNode.cpp  BlockNode.cpp  BooleanNode.cpp  BreakNode.cpp  ConditionalNode.cpp  ContinueNode.cpp  DoUntilLoopNode.cpp  DotVariableNode.cpp  EmptyNode.cpp  EnumDeclaration.cpp  ExitNode.cpp  ForLoopNode.cpp  FunctionCallNode.cpp  FunctionDeclNode.cpp  IfNode.cpp  Int64Node.cpp  LocalVarDeclNode.cpp  NewObjectNode.cpp  NullishCoalesceNode.cpp  NumberNode.cpp  PostfixNode.cpp  PrefixNode.cpp  RepeatLoopNode.cpp  ReturnNode.cpp  SimpleFunctionCallNode.cpp  SimpleVariableNode.cpp  StringNode.cpp  SwitchCaseNode.cpp  SwitchNode.cpp  ThrowNode.cpp  TryCatchNode.cpp  UnaryNode.cpp  WhileLoopNode.cpp  WithLoopNode.cpp
src/Underanalyzer/Compiler/Parser/: Expressions.cpp  Functions.cpp  ParseContext.cpp  Statements.cpp  StaticDeclarations.cpp
